--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -35,9 +35,9 @@ main {
     width: 100%;
 }
 
-footer {
-    position: flxed;
-    width: 100%;
+.footer {
+    position: relative;
+    width: auto;
     bottom: 0;
     left: 0;
     padding-top: 80px;
@@ -48,7 +48,7 @@ footer {
 }
 
 .container {
-    max-width: 1240px;
+    width: 100%;
     margin: auto;
     padding: 30px  40px;
 }
@@ -143,7 +143,9 @@ hr {
 
 .footer__bottom {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .copy__right {
@@ -167,6 +169,13 @@ hr {
     color: #313131;
 }
 
+.custom-hr {
+    border: none;
+    border-top: 2px;
+    width: 100%;
+    margin: 20px 0;
+} 
+
 @media screen and (max-width: 768px) {
     .content__footer {
         flex-wrap: wrap;
@@ -188,8 +197,9 @@ hr {
     }
 
     .footer__bottom {
-        flex-wrap: wrap;
-        justify-content: center;
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
     }
 }
 
