--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,22 +8,26 @@
     color: white;
     padding: 15px;
     text-align: center;
+    width: 100%
+}
+
+.nav-item {
+    list-style: none;
+    padding: 10px;
 }
 
 .nav-list {
-    list-style: none;
-    padding: 0;
     display: flex;
-    justify-content: center;
     gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
 }
 
-.nav-list li {
-    display: inline;
-}
 
 .nav-list a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
@@ -31,4 +35,24 @@
 
 .nav-list a:hover {
     color: #ffcc00;
+}
+
+.glass {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
+
+.nav-button {
+    color: white;
+    background-color: rgb(66, 103, 210);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.nav-button:hover {
+    background-color: rgb(45, 80, 180);
 }
